[package]
name = "sample-orbtk"
version = "0.1.0"
authors = ["hydry <hydry@twitter>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# orbtk = "0.3.1-alpha3"
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
serde = "1.0.106"
serde_derive = "1.0.106"